# vida-intake-agent

./: .env.example  .gitattributes  .gitignore  AGENT.md  LICENSE  README.md  agent.py  config.py  install.ps1  install.sh  pyproject.toml  requirements.txt  start_intake.bat  watcher.py
.github/: FUNDING.yml
.github/workflows/: build-installers.yml
docs/: DECISIONS.md  SIGNING.md
examples/: example.rules.md  vida.rules.md
intake_agent/: __init__.py  __main__.py  approvals.py  autostart.py  cli.py  config.py  extract.py  gui.py  ledger.py  logging_setup.py  models.py  mover.py  platform_utils.py  profile.py  prompts.py  router.py  setup_wizard.py  singleton.py  tools.py  tray.py  trayicon.py  watcher.py
packaging/: README.md  entry_app.py  entry_tray.py  intake-agent.spec  make_icon.py
packaging/linux/: intake-agent.desktop
packaging/windows/: intake-agent.iss
tests/: smoke_e2e.py  test_core.py
